# wasp-agent

./: .cz.yaml  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  smoke_agno_otel.py  smoke_prometheus.py  telemetry.py
.claude/: settings.json
.github/workflows/: ci-fix-agent.yaml  ci-fix-notifier.yaml  ci.yaml  e2e.yaml  jira-agent.yaml  pull-request.yaml
docs/architecture/: async-watcher.md  platform-provisioning.md
docs/brainstorms/: agno-crossplane-provisioning-flow.md
docs/brainstorms/archived/: 2026-05-13-multi-channel-agent.md  2026-05-14-agno-crossplane-provisioning-flow.md
docs/notes/: 2026-05-13-agno-api-cycle1.md
docs/plans/: 2026-05-13-multi-channel-agent-cycle1.md  2026-05-16-platform-watcher-cycle3.md  2026-05-17-opentelemetry-cycle4.md  2026-05-19-agno-otel-autoinstrumentation.md
docs/plans/archived/: 2026-05-16-platform-watcher-cycle3.md
docs/presentations/: 2026-06-15-jira-coding-agent.pptx
docs/references/: agno.md  gitea.md  k3d.md  production-readiness-checklist.md  project-scaffolding-checklist.md
docs/runbooks/: auth-admin.md  discord-setup.md  github-pat-setup.md  jira-coding-agent-setup.md  k3d-argocd-wasp-gitops.md  local-chat.md  local-infra.md  telegram-local-dev.md  validation-e2e.md  validation-gitops.md  validation-local-chat.md  validation-prometheus.md  validation-telegram.md  validation.md  wasp-gitops-application.yaml
docs/sdlc/: CLAUDE.md
docs/sdlc/01-exploration/: 2026-05-17-e2e-testing-without-external-chats.md  2026-05-20-llm-behavior-evaluation.md  2026-05-20-token-cost-budget.md  2026-05-26-disaster-recovery.md  2026-05-26-eu-ai-act.md  2026-05-26-incident-response.md  (+10 more)
docs/specs/: 2026-05-13-multi-channel-agent-cycle1-design.md  2026-05-15-platform-provisioning-design.md  2026-05-16-platform-watcher-cycle3-design.md  2026-05-16-platform-watcher-restart-resilience.md  2026-05-16-structured-logging.md  2026-05-17-agno-otel-autoinstrumentation.md  2026-05-17-opentelemetry-design.md
manifests/argocd/: wasp-gitops-application.yaml
manifests/tenants/: example.yaml
scripts/: admin-bootstrap  admin-invite  admin-link  admin-list  admin-revoke  ci-check-e2e-paths  e2e-with-debug  ensure-pr  gitops-down  gitops-up  jira-comment  jira-fetch  jira-transition  k3d-down  k3d-up  local-chat  local-chat-roteiro  local-chat-scenario  smoke
tests/: CLAUDE.md  conftest.py  notifiers.py  test_agent.py  test_auth.py  test_auth_cli.py  test_auth_guard.py  test_auth_repository.py  test_channels.py  test_cifix_validation.py  test_cluster_inventory.py  test_cluster_manifest.py  test_cluster_provider.py  test_cluster_provisioner.py  test_cluster_watcher.py  test_complexity.py  test_db_engine.py  test_discord.py  test_git_client.py  test_gitops_committer.py  test_interface_loader.py  test_jira_comment.py  test_jira_fetch.py  test_jira_transition.py  test_k8s_reader.py  test_logging.py  test_main.py  test_models.py  test_platform_cluster.py  test_platform_inventory.py  test_platform_provider.py  test_postgres_auth_repository.py  test_postgres_skeleton.py  test_postgres_watches_repository.py  test_provision.py  test_registry.py  test_resource_manifest.py  test_sessions.py  test_startup.py  test_telegram.py  (+4 more)
tests/e2e/: conftest.py  test_full_provisioning_flow.py
tests/smoke/: smoke_agno_otel.py  smoke_prometheus.py
tools/: __init__.py  git_client.py  notifier.py  provision.py  watcher.py
wasp/: __init__.py  agent.py  auth.py  auth_cli.py  auth_guard.py  git_client.py  gitops_committer.py  logging.py  models.py  notifier.py  platform_cluster.py  provision.py  sessions.py  startup.py  telegram.py  telemetry.py  watcher.py
wasp/auth/: __init__.py  _connection.py  _schema.py  postgres_repository.py  protocol.py  repository.py  sqlite_repository.py
wasp/clients/: __init__.py  channels.py  interfaces.py
wasp/db/: __init__.py
wasp/resources/: __init__.py  base.py  protocol.py  registry.py
wasp/watches/: __init__.py  _schema.py  repository.py
(+125 files in other folders)
