[project]
name = "wasp-agent"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "agno[anthropic,os,telegram]>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "PyGithub>=2.0.0",
    "pyyaml>=6.0",
    "kubernetes>=29.0.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-exporter-prometheus>=0.46b0",
    "opentelemetry-instrumentation-logging>=0.46b0",
    "openinference-instrumentation-agno>=0.1.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*", "smoke_*.py"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "if __name__ == .__main__.:",
]
